--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,19 @@
             "ZuggrCloud\\": "src/"
         }
     },
-    "optimize-autoloader": true
+    "scripts": {
+        "post-install-cmd": [
+            "git config core.hooksPath .githooks"
+        ],
+        "post-update-cmd": [
+            "git config core.hooksPath .githooks"
+        ],
+        "post-root-package-install": [
+            "git config core.hooksPath .githooks"
+        ]
+    },
+    "optimize-autoloader": true,
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.4"
+    }
 }
