--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     }],
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "nikic/fast-route": "^1.3"
     },
     "autoload": {
         "psr-4": {
